backup_individuals/sjeng/use_undefined_identifier/c0/reset_board
/data/output_dir/patch/sjeng/ida/clang/O0/sjeng-clang-O0/reset_board/src/utils.c:1578:22: error: use of undeclared identifier 'unk_429940'
memcpy( init_board, &unk_429940, sizeof( init_board)); 
                     ^
1 error generated.
make: *** [/data/output_dir/patch/sjeng/ida/clang/O0/sjeng-clang-O0/reset_board/src/obj/utils.o] Error 1
